--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,13 @@
-spring.application.name=DarioBebidas
-spring.datasource.url=jdbc:mysql://localhost:3306/dario_bebidas
+spring.datasource.url=jdbc:mysql://shinkansen.proxy.rlwy.net:18208/railway
 spring.datasource.username=root
-spring.datasource.password=
+spring.datasource.password=zAFqxasaErXOPwOAbsgZjfrBwhSrJXdF
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
-spring.web.resources.static-locations=classpath:/static/,file:uploads/
-spring.web.cors.allowed-origins=http://localhost:3000
+spring.jpa.properties.hibernate.jdbc.time_zone=UTC
+
+server.port=8080
+spring.jpa.open-in-view=true
+
