--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,6 +7,7 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 spring.jpa.properties.hibernate.jdbc.time_zone=UTC
+spring.jackson.time-zone=America/Sao_Paulo
 
 server.port=8080
 spring.jpa.open-in-view=true
