--- a/pom.xml
+++ b/pom.xml
@@ -66,7 +66,7 @@
 		<!-- MySQL -->
 		<dependency>
 			<groupId>com.mysql</groupId>
-			<artifactId>mysql-connector-j</artifactId>
+			<artifactId>mysql-connector-java</artifactId>
 			<version>8.0.33</version>
 			<scope>runtime</scope>
 		</dependency>
