--- a/pom.xml
+++ b/pom.xml
@@ -65,10 +65,9 @@
 
 		<!-- MySQL -->
 		<dependency>
-			<groupId>com.mysql</groupId>
+			<groupId>mysql</groupId>
 			<artifactId>mysql-connector-java</artifactId>
-			<version>8.0.33</version>
-			<scope>runtime</scope>
+			<version>8.0.29</version>
 		</dependency>
 
 		<!-- Lombok -->
